# comfyui_pilcothink_VisionSLM

./: README.md  __init__.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
nodes/: SLM_generator_node.py  SLM_model_selector.py  Vision_generator_node.py  Vision_model_selector.py  generator_node.py  merge_texts_with_gap.py  model_selector.py  rag_node.py
nodes/ollama/: ollama_connective.py  ollama_generator.py
nodes/vllm/: vllm_connective.py  vllm_generator.py
rag_doc/: example.txt
utils/: backend_aliases.py  download.py  rag_engine.py
utils/Generator/: gen_deepseek_vl.py  gen_gemma.py  gen_qwen.py  gen_qwen2.py  gen_qwen25.py
utils/Generator/SLM/: gen_qwen3.py
utils/Generator/VisionSLM/: gen_deepseek_vl.py  gen_gemma.py  gen_qwen2.py  gen_qwen25.py  gen_qwen3.py  gen_qwen3t.py
